added add project feature

--- a/client/src/sass/ui/_ui.scss
+++ b/client/src/sass/ui/_ui.scss
@@ -2,11 +2,12 @@
 
   // Components
   "components/_buttons",
-  //"components/_infowindow",
+  "components/_infowindow",
   //"components/_modal",
 
   // Material Components
   //"components/material/_tabs"
-  "components/material/_list"
+  "components/material/_list",
+  "components/material/_select"
 
 ;
