change static username on main menu to current logged user

--- a/client/templates/partials/_main_menu_sidenav.html
+++ b/client/templates/partials/_main_menu_sidenav.html
@@ -10,10 +10,10 @@
         </div>
         <div class="profile-details">
             <!-- TODO: Remove this and uncomment below when deploy -->
-            <h3>Firstname</h3>
-            <p class="profile-role">Role</p>
-{#            <h3>{{ current_user.firstname }}</h3>#}
-{#            <p class="profile-role">{{ current_user.role.get_rolename() }}</p>#}
+{#            <h3>Firstname</h3>#}
+{#            <p class="profile-role">Role</p>#}
+            <h3>{{ current_user.firstname }}</h3>
+            <p class="profile-role">{{ current_user.role.get_rolename() }}</p>
         </div>
     </div>
 {% raw %}
