--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
         <script type="text/javascript"
-                src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,places"></script>
+                src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyBU2IhITO_ygNUan5ortuYxJc6idxrsFlE&libraries=geometry,places"></script>
     {% raw %}
     <div id="index-container" ng-controller="indexController as indexCtl">
     {% endraw %}
